# schell

./: .gitignore  README.md  Schell.cabal  runtests.sh  schell.hs
Schell/: Main.hs  Parser.hs  Schell.hs
Test/: ParseEvalTest.hs  Test.hs  closure.scm  closure.scmout  define.scm  define.scmout  expr.scm  expr.scmout  if.scm  lambda.scm  primitive.scm  primitive.scmout
